--- a/test/css/style.css
+++ b/test/css/style.css
@@ -11332,9 +11332,31 @@ p {
   font-size: 24px;
   font-weight: 500; }
 
-button:hover, button:focus, button:active {
+button:hover, button:focus, button:active,
+input:hover,
+input:focus,
+input:active {
   outline: none;
   border: none; }
+
+.fontli {
+  display: flex;
+  align-items: center; }
+  .fontli .font-btn {
+    background: #fff;
+    width: 60px;
+    line-height: 60px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    outline: 0;
+    border-top: 0;
+    border-bottom: 0;
+    border-left: 0;
+    cursor: pointer;
+    border-right: 1px sold #dbdbdb !important; }
+    .fontli .font-btn:last-of-type {
+      border-right: 0; }
 
 /*===========================================
 Header Styles
@@ -11345,7 +11367,7 @@ header {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 2; }
+  z-index: 3; }
   @media (max-width: 991px) {
     header {
       display: none; } }
@@ -11368,6 +11390,9 @@ header {
           header .menu ul li a.navlink:hover {
             color: #ffffff;
             background: linear-gradient(to top, #F7BC3A 50%, transparent 50%); }
+          header .menu ul li a.navlink.active {
+            color: #ffffff;
+            background: linear-gradient(to top, #F7BC3A 50%, transparent 50%); }
 
 .mobMenu {
   display: none; }
@@ -11375,14 +11400,14 @@ header {
     .mobMenu {
       display: flex;
       align-items: center;
-      padding: 15px;
+      padding: 0 15px;
       position: fixed;
       width: 100%;
       top: 0;
       left: 0;
       right: 0;
-      background: #ffffff;
-      z-index: 2; } }
+      background-image: linear-gradient(to right, rgba(32, 0, 0, 0.63), rgba(13, 58, 157, 0.63));
+      z-index: 4; } }
   .mobMenu .menuBtn {
     color: #F7BC3A; }
   .mobMenu .logo {
@@ -11399,14 +11424,13 @@ header {
       z-index: 11;
       top: 0;
       left: -300px;
-      background-color: #ffffff;
+      background-image: linear-gradient(to right, rgba(32, 0, 0, 0.63), rgba(13, 58, 157, 0.63));
       overflow-x: hidden;
       transition: 0.5s;
       padding: 20px; }
       .sidenav .closebtn {
         float: right;
-        margin-right: 20px;
-        color: #000; }
+        margin-right: 20px; }
       .sidenav ul {
         margin: 100px 0 0 auto;
         padding: 0; }
@@ -11416,21 +11440,69 @@ header {
             font-size: 14px;
             font-weight: 600;
             margin-bottom: 45px;
-            display: table;
-            color: #000; }
+            display: table; }
             .sidenav ul li a.navlink:hover {
-              color: #000;
+              color: #FFFFFF;
+              background: linear-gradient(to top, #F7BC3A 50%, transparent 50%); }
+            .sidenav ul li a.navlink.active {
+              color: #FFFFFF;
               background: linear-gradient(to top, #F7BC3A 50%, transparent 50%); } }
 
 /*===========================================
 Home Banner Styles
 ===========================================*/
+/* ---- stats.js ---- */
+.count-particles {
+  background: #000022;
+  position: absolute;
+  top: 48px;
+  left: 0;
+  width: 80px;
+  color: #13e8e9;
+  font-size: 0.8em;
+  text-align: left;
+  text-indent: 4px;
+  line-height: 14px;
+  padding-bottom: 2px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  display: none; }
+
+.js-count-particles {
+  font-size: 1.1em;
+  display: none; }
+
+#stats,
+.count-particles {
+  -webkit-user-select: none;
+  margin-top: 5px;
+  margin-left: 5px;
+  display: none; }
+
+#stats {
+  border-radius: 3px 3px 0 0;
+  overflow: hidden; }
+
+.count-particles {
+  border-radius: 0 0 3px 3px; }
+
+/* ---- particles.js container ---- */
+#particles-js {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2; }
+
 .banner {
   width: 100%;
   height: 100vh;
   position: relative; }
   .banner .owl-carousel .item {
-    position: relative; }
+    position: relative;
+    z-index: 3; }
     .banner .owl-carousel .item::before {
       content: "";
       position: absolute;
@@ -11445,7 +11517,7 @@ Home Banner Styles
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      z-index: 2; }
+      z-index: 3; }
       .banner .owl-carousel .item .container .content h1 {
         font-size: 65px;
         font-weight: bold; }
@@ -11465,7 +11537,8 @@ Home Banner Styles
     position: absolute;
     bottom: 50%;
     right: 20%;
-    transform: translateY(50%); }
+    transform: translateY(50%);
+    z-index: 3; }
     @media (max-width: 991px) {
       .banner .owl-carousel .owl-nav {
         bottom: 30%; } }
@@ -11473,13 +11546,16 @@ Home Banner Styles
     cursor: pointer;
     color: #ffffff;
     font-size: 14px;
-    font-weight: 600; }
+    font-weight: 600;
+    position: relative;
+    z-index: 3; }
   .banner .owl-carousel .owl-prev.disabled,
   .banner .owl-carousel .owl-next.disabled {
     pointer-events: none;
     opacity: 0.2; }
   .banner .owl-carousel .prev-slide {
-    position: relative; }
+    position: relative;
+    z-index: 3; }
     .banner .owl-carousel .prev-slide::after {
       position: absolute;
       content: "";
@@ -11893,12 +11969,12 @@ Brand Section Styles
     margin-bottom: 50px; }
     .brand .owl-carousel .item .img-container {
       margin-bottom: 30px;
-      border-right: 1px solid #D4D4D4;
+      border-right: 1px solid #d4d4d4;
       cursor: pointer; }
       @media (max-width: 600px) {
         .brand .owl-carousel .item .img-container {
           border-right: 0;
-          border-bottom: 1px solid #D4D4D4;
+          border-bottom: 1px solid #d4d4d4;
           display: flex;
           justify-content: center; } }
       .brand .owl-carousel .item .img-container img {
@@ -11920,13 +11996,140 @@ Footer Styles
 footer {
   background: #212028;
   padding: 70px 0; }
-  footer .footer {
-    display: flex;
-    align-items: center; }
-    footer .footer p {
+  @media (max-width: 991px) {
+    footer .footer {
+      text-align: center; } }
+  footer .footer h4 {
+    font-size: 30px;
+    font-weight: bold; }
+  footer .footer p {
+    font-size: 14px;
+    font-weight: 300;
+    margin-bottom: 30px; }
+  footer form {
+    position: relative; }
+    @media (max-width: 991px) {
+      footer form {
+        margin-bottom: 30px; } }
+    footer form .form-group {
+      margin: 5px 0 0 0; }
+      footer form .form-group .form-control {
+        background-color: #2f2e3a;
+        border: 0;
+        border-radius: 0;
+        color: #FFFFFF;
+        font-size: 14px;
+        font-weight: normal;
+        height: 60px;
+        line-height: 60px;
+        padding: 0 120px 0 20px; }
+        footer form .form-group .form-control:focus, footer form .form-group .form-control:hover, footer form .form-group .form-control:active {
+          outline: 0;
+          border: 0;
+          -webkit-box-shadow: none;
+          box-shadow: none; }
+        footer form .form-group .form-control::-webkit-input-placeholder {
+          color: #FFFFFF;
+          font-size: 14px;
+          font-weight: normal; }
+        footer form .form-group .form-control::-moz-placeholder {
+          color: #FFFFFF;
+          font-size: 14px;
+          font-weight: normal; }
+        footer form .form-group .form-control::-ms-input-placeholder {
+          color: #FFFFFF;
+          font-size: 14px;
+          font-weight: normal; }
+        footer form .form-group .form-control::placeholder {
+          color: #FFFFFF;
+          font-size: 14px;
+          font-weight: normal; }
+    footer form a.subscribe {
+      display: inline-block;
+      background: #F7BC3A;
+      color: #212028;
+      text-transform: uppercase;
+      font-size: 15px;
+      font-weight: bold;
+      padding: 0 10px;
+      line-height: 60px;
+      text-align: center;
+      position: absolute;
+      top: 0;
+      right: 0; }
+      footer form a.subscribe:hover {
+        text-decoration: none;
+        color: #212028; }
+  @media (max-width: 991px) {
+    footer .mobcol {
+      text-align: center;
+      margin-bottom: 30px; } }
+  footer a.link {
+    display: inline-block;
+    width: 60px;
+    line-height: 60px;
+    text-align: center;
+    border: 1px solid #777777;
+    margin-right: 10px; }
+    @media (max-width: 1160px) {
+      footer a.link {
+        width: 40px;
+        line-height: 40px; } }
+    @media (max-width: 991px) {
+      footer a.link {
+        width: 60px;
+        line-height: 60px; } }
+  footer .contact {
+    margin-top: 45px; }
+    @media (max-width: 767px) {
+      footer .contact {
+        text-align: center; } }
+    footer .contact p {
+      font-size: 12px;
+      font-weight: 600;
+      color: #F7BC3A;
+      margin-bottom: 15px;
+      text-transform: uppercase; }
+    footer .contact h5 {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 35px; }
+  footer p.webp {
+    font-size: 12px;
+    color: #F7BC3A;
+    font-weight: 600; }
+    @media (max-width: 767px) {
+      footer p.webp {
+        text-align: center; } }
+  @media (max-width: 767px) {
+    footer .footerlink {
+      text-align: center; } }
+  footer .footerlink ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    margin-right: 150px; }
+    @media (max-width: 767px) {
+      footer .footerlink ul {
+        margin-right: 0; } }
+    footer .footerlink ul li a {
       font-size: 14px;
       font-weight: 300; }
-      footer .footer p.designp {
+      footer .footerlink ul li a:hover {
+        color: #FFFFFF;
+        text-decoration: none; }
+  footer .webinfo {
+    display: flex;
+    align-items: center;
+    margin-top: 100px; }
+    @media (max-width: 767px) {
+      footer .webinfo {
+        display: block;
+        text-align: center; } }
+    footer .webinfo p {
+      font-size: 14px;
+      font-weight: 300; }
+      footer .webinfo p.infop {
         margin-left: auto; }
-        footer .footer p.designp span {
+        footer .webinfo p.infop span {
           color: #F7BC3A; }
